--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,10 @@ x64/Release/cudart32_75.dll
 x64/Release/cudart64_75.dll
 /Soul Engine.VC.db
 /Soul Engine.VC.VC.opendb
+/Soul Engine/Source Files/Engine Core/Allocator/.vs/LinearAllocator/v15/Browse.VC.db
+/Soul Engine/Source Files/Engine Core/Allocator/.vs/LinearAllocator/v15/Browse.VC.opendb
+/Soul Engine/Source Files/Engine Core/Allocator/.vs/LinearAllocator/v15
+/Soul Engine/Source Files/Engine Core/Allocator/LinearAllocator.sln
+/Soul Engine/Source Files/Engine Core/Allocator/LinearAllocator.vcxproj.filters
+/Soul Engine/Source Files/Engine Core/Allocator/LinearAllocator.vcxproj
+/Soul Engine/Source Files/Engine Core/Allocator/.vs/LinearAllocator/v15
